--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -32,11 +32,7 @@ jobs:
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: |
-        php artisan test
-        phpdbg -qrr ./vendor/phpunit/phpunit/phpunit -v --colors=never --stderr --coverage-clover=coverage.xml
-        export CODECOV_TOKEN=${{ secrets.CODECOV_TOKEN }}
-        bash <(curl -s https://codecov.io/bash) || echo 'Codecov failed to upload'
+      run: vendor/bin/phpunit --coverage-clover coverage.xml
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
       with:
